--- a/Scms.Web/Areas/ProductManage/Views/Product/ItemIndex.cshtml
+++ b/Scms.Web/Areas/ProductManage/Views/Product/ItemIndex.cshtml
@@ -7,6 +7,7 @@
     <link href="~/ExternalReference/bootstrap-3.4.1/css/bootstrap.css" rel="stylesheet" />
     <script src="~/ExternalReference/jquery/jquery-3.6.0.min.js"></script>
     <script src="~/ExternalReference/bootstrap-3.4.1/js/bootstrap.js"></script>
+    <script src="~/ExternalReference/vue/vue.global.js"></script>
 </head>
 <body>
 
@@ -40,13 +41,36 @@
         <table class="table table-hover table-bordered">
             <thead>
                 <tr class="info" style="visibility: hidden" id="id_thead_bomList">
-                    <th>子料号</th>
+                    <th>料号</th>
                     <th>名称</th>
-                    <th>数量</th>
-                    <th>操作</th>
+                    <th>规格</th>
+                    <th>图号</th>
+                    <th>品牌</th>
+                    <th>物料类型</th>
+                    <th>创建人</th>
+                    <th>创建日期</th>
+                    <th>更新人</th>
+                    <th>更新日期</th>
                 </tr>
             </thead>
-            <tbody id="id_table_bomList"></tbody>
+            <tbody id="id_tbody_bomList">
+                <tr v-for="site in itemList" :site="site">
+                    <td>{{site.ItemCode}}</td>
+                    <td>{{site.ItemName}}</td>
+                    <td>{{site.Specifications}}</td>
+                    <td>{{site.PictureNo}}</td>
+                    <td>{{site.Brand}}</td>
+                    <td>
+                        <label v-if="site.ItemType==1">零件料号</label>
+                        <label v-else-if="site.ItemType==2">模块料号</label>
+                        <label v-else-if="site.ItemType==3">成品料号</label>
+                    </td>
+                    <td>{{site.CreateUser}}</td>
+                    <td>{{site.CreateTime}}</td>
+                    <td>{{site.UpdateUser}}</td>
+                    <td>{{site.UpdateTime}}</td>
+                </tr>
+            </tbody>
         </table>
     </div>
 
@@ -60,16 +84,44 @@
 
 
 <script type="text/javascript">
-    $("#id_button_search").click(function () {
-        var itemCode = $("#id_input_itemcode").val();
-        SearchBomByCode(itemCode);
-    });
 
-    function SearchBomByCode() {
-
+    const vueapp = {
+        data() {
+            return {
+                itemList: []
+            }
+        },
+        
     }
 
 
+    const vm = Vue.createApp(vueapp).mount("#id_tbody_bomList")
+
+    $("#id_button_search").click(function () {
+        var itemCode = $("#id_input_itemcode").val();
+        var itemName = $("#id_input_itemname").val();
+        var createUser= $("#id_input_creatuser").val();
+        SearchBomByCode(itemCode, itemName, createUser);
+    });
+
+    function SearchBomByCode(itemCode, itemName, createUser) {
+        $.ajax({
+            type: "GET",
+            url: "/ProductManage/Product/SearchItem",
+            data: { "searchString": { "ItemCode": itemCode, "ItemName": itemName, "CreateUser": createUser } },
+            dataType: "JSON",
+            success: function (resObj) {
+                debugger
+                if (resObj.IsSuccess) {
+                    $("#id_thead_bomList").css("visibility", "visible");
+                    vm.itemList = resObj.ResultObj;
+                } else {
+                    alert(resObj.Message);
+                }
+
+            }
+        });
+    }
 
 
 </script>
