--- a/Scms.Web/Areas/Basics/Views/Home/Right.cshtml
+++ b/Scms.Web/Areas/Basics/Views/Home/Right.cshtml
@@ -55,12 +55,12 @@
             });
 
             tabs.add({
-                url: '/ProductManage/Product/BomIndex',
-                label: 'BOM维护',
+                url: '/ProductManage/Product/ItemIndex',
+                label: '料号管理',
                 //开启Tab后是否锁定(不允许关闭，默认: false)
                 lock: false
             });
-            $('input[type="button"]').button();
+/*            $('input[type="button"]').button();*/
 
         });
         function addTab(url, name) {
