--- a/Scms.Web/Areas/ProductManage/Views/Product/ItemIndex.cshtml
+++ b/Scms.Web/Areas/ProductManage/Views/Product/ItemIndex.cshtml
@@ -65,8 +65,8 @@
                         <label v-else-if="site.ItemType==2">模块料号</label>
                         <label v-else-if="site.ItemType==3">成品料号</label>
                     </td>
-                    <td>{{site.CreateUser}}</td>
                     <td>{{site.CreateTime.substring(0,10)}}</td>
+                    <td>{{site.CreateTime}}</td>
                     <td>{{site.UpdateUser}}</td>
                     <td>{{site.UpdateTime.substring(0,10)}}</td>
                 </tr>
