--- a/Scms.Web/Areas/ProductManage/Views/Product/ItemIndex.cshtml
+++ b/Scms.Web/Areas/ProductManage/Views/Product/ItemIndex.cshtml
@@ -8,7 +8,47 @@
     <script src="~/reference/jquery/jquery-3.6.0.min.js"></script>
     <script src="~/reference/bootstrap-3.4.1/js/bootstrap.js"></script>
     <script src="~/reference/vue/vue.global.js"></script>
+    <style>
+        alert {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            min-width: 300px;
+            max-width: 600px;
+            transform: translate(-50%,-50%);
+            z-index: 99999;
+            text-align: center;
+            padding: 15px;
+            border-radius: 3px;
+        }
+
+        .alert-success {
+            color: #3c763d;
+            background-color: #dff0d8;
+            border-color: #d6e9c6;
+        }
+
+        .alert-info {
+            color: #31708f;
+            background-color: #d9edf7;
+            border-color: #bce8f1;
+        }
+
+        .alert-warning {
+            color: #8a6d3b;
+            background-color: #fcf8e3;
+            border-color: #faebcc;
+        }
+
+        .alert-danger {
+            color: #a94442;
+            background-color: #f2dede;
+            border-color: #ebccd1;
+        }
+    </style>
 </head>
+
 <body>
 
     <div class="container" style="margin:10px 10px 10px 10px;padding:10px 10px 10px 10px">
@@ -35,7 +75,7 @@
         </form>
     </div>
 
-
+    <div id="id_div_alert" style="text-align:center;height:30px;"></div>
 
     <div class="container table-responsive" style="margin-top:20px">
         <table class="table table-hover table-bordered">
@@ -51,6 +91,7 @@
                     <th>创建日期</th>
                     <th>更新人</th>
                     <th>更新日期</th>
+                    <th>操作</th>
                 </tr>
             </thead>
             <tbody id="id_tbody_bomList">
@@ -69,6 +110,9 @@
                     <td>{{site.CreateTime.substring(0,10)}}</td>
                     <td>{{site.UpdateUser}}</td>
                     <td>{{site.UpdateTime.substring(0,10)}}</td>
+                    <td><button class="btn btn-warning" v-on:click="VueEditItem(site)">编辑</button></td>
+                    <td @*style="display:none;"*@>{{site.RowVersion}}</td>
+                    
                 </tr>
             </tbody>
         </table>
@@ -90,27 +134,27 @@
                     </h4>
                 </div>
 
-                <form method="post" >
+                <form method="post">
                     <div class="modal-body">
                         <div class="form-group form-inline">
                             <label>编码</label>
-                            <input class="form-control" style="margin-left:5px" id="id_form_itemcode" />
+                            <input class="form-control" style="margin-left:5px" id="id_form_itemcode_add" />
                             <label style="margin-left:30px">名称</label>
-                            <input class="form-control" style="margin-left:5px" id="id_form_itemname" />
+                            <input class="form-control" style="margin-left:5px" id="id_form_itemname_add" />
                         </div>
 
                         <div class="form-group form-inline">
                             <label>规格</label>
-                            <input class="form-control" style="margin-left:5px" id="id_form_specifications" />
+                            <input class="form-control" style="margin-left:5px" id="id_form_specifications_add" />
                             <label style="margin-left:30px">品牌</label>
-                            <input class="form-control" style="margin-left:5px" id="id_form_brand" />
+                            <input class="form-control" style="margin-left:5px" id="id_form_brand_add" />
                         </div>
 
                         <div class="form-group form-inline">
                             <label>图号</label>
-                            <input class="form-control" style="margin-left:5px" id="id_form_pictureno" />
+                            <input class="form-control" style="margin-left:5px" id="id_form_pictureno_add" />
                             <label style="margin-left:30px">类型</label>
-                            <select name="ItemType" id="id_form_itemtype" class="form-control" style="margin-left:5px">
+                            <select name="ItemType" id="id_form_itemtype_add" class="form-control" style="margin-left:5px">
                                 <option value=1>零件料号</option>
                                 <option value=2>模块料号</option>
                                 <option value=3>成品料号</option>
@@ -129,8 +173,64 @@
 
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
-    </div><!-- /.modal -->
+    </div>
 
+
+    <!-- 模态框，编辑物料 -->
+    <div class="modal fade" id="id_modal_edititem" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"
+                            aria-hidden="true">
+                        ×
+                    </button>
+                    <h4 class="modal-title" >
+                        编辑料号
+                    </h4>
+                </div>
+
+                <form method="post">
+                    <div class="modal-body">
+                        <div class="form-group form-inline">
+                            <label>编码</label>
+                            <input class="form-control" style="margin-left: 5px;"  readonly="readonly" id="id_form_itemcode_edit" />
+                            <label style="margin-left:30px">名称</label>
+                            <input class="form-control" style="margin-left:5px" id="id_form_itemname_edit" />
+                        </div>
+
+                        <div class="form-group form-inline">
+                            <label>规格</label>
+                            <input class="form-control" style="margin-left:5px" id="id_form_specifications_edit" />
+                            <label style="margin-left:30px">品牌</label>
+                            <input class="form-control" style="margin-left:5px" id="id_form_brand_edit" />
+                        </div>
+
+                        <div class="form-group form-inline">
+                            <label>图号</label>
+                            <input class="form-control" style="margin-left:5px" id="id_form_pictureno_edit" />
+                            <label style="margin-left:30px">类型</label>
+                            <select name="ItemType" id="id_form_itemtype_edit" class="form-control" style="margin-left:5px">
+                                <option value=1>零件料号</option>
+                                <option value=2>模块料号</option>
+                                <option value=3>成品料号</option>
+                            </select>
+                            <input  type="hidden" id="id_form_rowVersion_edit" />
+                        </div>
+
+
+                        <div class="modal-footer">
+                            <div class="form-group">
+                                <span class="btn btn-primary" onclick="EditItem()">提交修改</span>
+                            </div>
+                        </div>
+
+                    </div>
+                </form>
+
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div>
 
 
 </body>
@@ -146,21 +246,35 @@
                 itemList: []
             }
         },
-        
+        methods: {
+            VueEditItem(site) {
+                $('#id_modal_edititem').modal("show");
+
+                $("#id_form_itemcode_edit").val(site.ItemCode);
+                $("#id_form_itemname_edit").val(site.ItemName);
+                $("#id_form_specifications_edit").val(site.Specifications);
+                $("#id_form_brand_edit").val(site.Brand);
+                $("#id_form_pictureno_edit").val(site.PictureNo);
+                $("#id_form_itemtype_edit").val(site.ItemType); 
+                $("#id_form_rowVersion_edit").val(site.RowVersion);
+            }
+        }
     }
 
 
     const vm = Vue.createApp(vueapp).mount("#id_tbody_bomList")
 
     $("#id_button_search").click(function () {
-        var itemCode = $("#id_input_itemcode").val();
-        var itemName = $("#id_input_itemname").val();
-        var createUser= $("#id_input_creatuser").val();
-        SearchBomByCode(itemCode, itemName, createUser);
+        SearchItem();
     });
 
-    function SearchBomByCode(itemCode, itemName, createUser) {
+
+    //查询物料
+    function SearchItem() {
         debugger
+        var itemCode = $("#id_input_itemcode").val();
+        var itemName = $("#id_input_itemname").val();
+        var createUser = $("#id_input_creatuser").val();
         $.ajax({
             type: "GET",
             url: "/ProductManage/Product/SearchItem",
@@ -179,13 +293,14 @@
         });
     }
 
+    //新增物料
     function AddItem() {
-        var itemCode = $("#id_form_itemcode").val();
-        var itemName = $("#id_form_itemname").val();
-        var specifications = $("#id_form_specifications").val();
-        var brand = $("#id_form_brand").val();
-        var pictureNo = $("#id_form_pictureno").val();
-        var itemType = $("#id_form_itemtype").val();
+        var itemCode = $("#id_form_itemcode_add").val();
+        var itemName = $("#id_form_itemname_add").val();
+        var specifications = $("#id_form_specifications_add").val();
+        var brand = $("#id_form_brand_add").val();
+        var pictureNo = $("#id_form_pictureno_add").val();
+        var itemType = $("#id_form_itemtype_add").val();
         var xsfr = $('input[name="__RequestVerificationToken"]').val();
         debugger
         $.ajax({
@@ -198,6 +313,38 @@
                 if (resObj.IsSuccess) {
                     $("#id_thead_bomList").css("visibility", "visible");
                     vm.itemList = resObj.ResultObj;
+                } else {
+                    alert(resObj.Message);
+                }
+
+            }
+        });
+    }
+
+    //编辑物料
+    function EditItem() {
+        var itemCode = $("#id_form_itemcode_edit").val();
+        var itemName = $("#id_form_itemname_edit").val();
+        var specifications = $("#id_form_specifications_edit").val();
+        var brand = $("#id_form_brand_edit").val();
+        var pictureNo = $("#id_form_pictureno_edit").val();
+        var itemType = $("#id_form_itemtype_edit").val();
+        var rowVersion = $("#id_form_rowVersion_edit").val();
+        //var xsfr = $('input[name="__RequestVerificationToken"]').val();
+        $.ajax({
+            type: "POST",
+            url: "/ProductManage/Product/EditItem",
+            data: { "ItemCode": itemCode, "ItemName": itemName, "Specifications": specifications, "Brand": brand, "PictureNo": pictureNo, "ItemType": itemType, "RowVersion": rowVersion },
+            dataType: "JSON",
+            success: function (resObj) {
+                debugger
+                if (resObj.IsSuccess) {
+                    $('#id_modal_edititem').modal("hide");
+                    $('#id_div_alert').html('操作成功').addClass('alert-success').show().delay(2000).fadeOut();
+                    $("#id_input_itemcode").val("");
+                    $("#id_input_itemname").val("");
+                    $("#id_input_creatuser").val("");
+                    SearchItem();
                 } else {
                     alert(resObj.Message);
                 }
