--- a/Scms.Web/Areas/ProductManage/Views/Product/ItemIndex.cshtml
+++ b/Scms.Web/Areas/ProductManage/Views/Product/ItemIndex.cshtml
@@ -75,7 +75,7 @@
         </form>
     </div>
 
-    <div id="id_div_alert" style="text-align:center;height:30px;"></div>
+    <div id="id_div_alert" style="text-align: center; height: 30px; line-height:30px"></div>
 
     <div class="container table-responsive" style="margin-top:20px">
         <table class="table table-hover table-bordered">
@@ -111,7 +111,7 @@
                     <td>{{site.UpdateUser}}</td>
                     <td>{{site.UpdateTime.substring(0,10)}}</td>
                     <td><button class="btn btn-warning" v-on:click="VueEditItem(site)">编辑</button></td>
-                    <td @*style="display:none;"*@>{{site.RowVersion}}</td>
+                    <td style="display:none;">{{site.RowVersion}}</td>
                     
                 </tr>
             </tbody>
